lwcBundle/main/default/objects/Game_Event__e/Game_Event__e.object-meta.xml
<CustomObject>
    <label>Game Event</label>
    <pluralLabel>Game Events</pluralLabel>
</CustomObject>