lwcBundle/main/default/objects/Game_Event__e/fields/Player_O__c.field-meta.xml
<CustomField>
    <fullName>Player_O__c</fullName>
    <label>Player_O</label>
    <length>18</length>
    <type>Text</type>
</CustomField>