lwcBundle/main/default/objects/Game_Event__e/fields/Player_X__c.field-meta.xml
<CustomField>
    <fullName>Player_X__c</fullName>
    <label>Player_X</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>