lwcBundle/main/default/objects/Game_Event__e/fields/Start_Game__c.field-meta.xml
<CustomField>
    <fullName>Start_Game__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Game</label>
    <type>Checkbox</type>
</CustomField>